--- a/FoodOrderingSystem/frontend/src/styles/home.css
+++ b/FoodOrderingSystem/frontend/src/styles/home.css
@@ -14,3 +14,14 @@
         min-height: 300px;
     }
 }
+
+
+input::placeholder{
+    font-style: italic;
+}
+
+.hovereffect:hover{
+    transform: scale(1.02);
+    transition: 0.3s ease-in-out;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+}
